--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -1,10 +1,56 @@
-h1 {
-	color: #f3f3f3;
+body {
+	color: #333;
+	font-family: arial;
+	max-width: 650px;
+	margin: 0 auto;
+	padding: 16px;
+
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	justify-content: space-between;
+}
+.main-content {
+	flex-grow: 1;
 }
 
-img {
+footer {
+	color: #888;
+	border-top: 1px solid #eee;
+	margin-top: 16px;
+	padding: 16px 0;
+}
+
+header {
+	margin-top: 16px;
+	margin-bottom: 48px;
+}
+h1 {
+	font-size: 64px;
+	margin-bottom: 16px;
+}
+
+header a {
+	color: #888;
+	margin-right: 16px;
+	text-decoration: none;
+}
+
+.portrait {
 	width: 250px;
 	height: 250px;
 	object-fit: cover;
 	border-radius: 70%;
+}
+
+input {
+	border: 1px solid #ccc;
+	padding: 8px;
+}
+button {
+	cursor: pointer;
+	border: 1px solid #888;
+	background-color: #888;
+	color: white;
+	padding: 8px;
 }
