added mongo section

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -1,12 +1,15 @@
 <html>
 	<head>
 		<title>about</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="/img/weather.png">
 		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
 	<body>
 		<div class="main-content">
 		{{>header}}
+		<p>This site was created by: Michael McLean,<br/>
+			it uses data from <a href="https://www.mapbox.com/" target="_blank">mapbox.com</a> and <a href="https://weatherstack.com/" target="_blank">weatherstack.com</a></p>
 		<img class="portrait" src="/img/SAM_5004.JPG" />
 
 		</div>
